[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather_app"
version = "0.1.0"
description = "Stateful Weather Agents demo with multi-agent orchestration"
authors = [{ name = "Maryam" }]
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
